--- a/Project/Hebrew Pi.csproj
+++ b/Project/Hebrew Pi.csproj
@@ -370,6 +370,8 @@
     <Compile Include="Source\Common\Hebrew\WinForms\CelebrationVersesBoardForm.Designer.cs">
       <DependentUpon>CelebrationVersesBoardForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Source\Database\AbstractRow.cs" />
+    <Compile Include="Source\Database\ApplicationDatabase.cs" />
     <Compile Include="Source\Database\DecupletRow.cs" />
     <Compile Include="Source\MainForm.cs">
       <SubType>Form</SubType>
@@ -377,8 +379,18 @@
     <Compile Include="Source\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Source\Program.cs" />
+    <Compile Include="Source\Program\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\Program\Program.Interop.cs" />
+    <Compile Include="Source\Program\Program.Localization.cs" />
+    <Compile Include="Source\Program\Program.Vars.cs" />
+    <Compile Include="Source\Program\System\ApplicationCommandLine.cs" />
+    <Compile Include="Source\Program\System\ApplicationStatistics.cs" />
+    <Compile Include="Source\Program\System\SettingsHelper.cs" />
+    <Compile Include="Source\Program\Translations\AppTranslations.cs" />
+    <Compile Include="Source\Program\Translations\AppTranslations.Keys.cs" />
+    <Compile Include="Source\Program\Translations\AppTranslations.News.cs" />
+    <Compile Include="Source\Program\Translations\AppTranslations.Notices.cs" />
     <EmbeddedResource Include="Dependencies\CoolPrintPreviewDialog\CoolPrintPreviewDialog.fr.resx">
       <DependentUpon>CoolPrintPreviewDialog.cs</DependentUpon>
     </EmbeddedResource>
@@ -642,5 +654,6 @@
       <Link>Properties\OrdisoftwareHebrewPiSetup.iss</Link>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
