--- a/Project/Hebrew Pi.csproj
+++ b/Project/Hebrew Pi.csproj
@@ -373,6 +373,7 @@
     <Compile Include="Source\Database\AbstractRow.cs" />
     <Compile Include="Source\Database\ApplicationDatabase.cs" />
     <Compile Include="Source\Database\ApplicationDatabase.Fill.cs" />
+    <Compile Include="Source\Database\IterationRow.cs" />
     <Compile Include="Source\Database\DecupletRow.cs" />
     <Compile Include="Source\Entities\Bookmarks.cs" />
     <Compile Include="Source\Entities\History.cs" />
@@ -388,10 +389,13 @@
     </Compile>
     <Compile Include="Source\Enums\PiDecimalsExtractSize.cs" />
     <Compile Include="Source\Entities\GroupInfo.cs" />
+    <Compile Include="Source\Forms\MainForm\MainForm.SQLite.CreateTable.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Source\Forms\MainForm\MainForm.TextFile.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Source\Forms\MainForm\MainForm.SQLite.cs">
+    <Compile Include="Source\Forms\MainForm\MainForm.SQLite.Batch.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Source\Forms\MainForm\MainForm.cs">
