--- a/Project/Hebrew Pi.csproj
+++ b/Project/Hebrew Pi.csproj
@@ -389,6 +389,9 @@
     </Compile>
     <Compile Include="Source\Enums\PiDecimalsExtractSize.cs" />
     <Compile Include="Source\Entities\GroupInfo.cs" />
+    <Compile Include="Source\Forms\MainForm\MainForm.Messages.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Source\Forms\MainForm\MainForm.SQLite.CreateTable.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -482,6 +485,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Source\Common\Core\WinForms\ExceptionForm.fr.resx">
       <DependentUpon>ExceptionForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Source\Common\Core\WinForms\ExceptionForm.resx">
       <DependentUpon>ExceptionForm.cs</DependentUpon>
