--- a/Project/Hebrew Pi.csproj
+++ b/Project/Hebrew Pi.csproj
@@ -389,15 +389,10 @@
     </Compile>
     <Compile Include="Source\Enums\PiDecimalsExtractSize.cs" />
     <Compile Include="Source\Entities\GroupInfo.cs" />
-    <Compile Include="Source\Forms\MainForm\MainForm.Messages.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Source\Forms\MainForm\MainForm.SQLite.CreateData.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Source\Forms\MainForm\MainForm.TextFile.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Source\Forms\MainForm\MainForm.TextFile.cs" />
     <Compile Include="Source\Forms\MainForm\MainForm.SQLite.Batch.cs">
       <SubType>Form</SubType>
     </Compile>
