--- a/Project/Hebrew Pi.csproj
+++ b/Project/Hebrew Pi.csproj
@@ -555,6 +555,7 @@
     <None Include="..\README.md">
       <Link>README.md</Link>
     </None>
+    <None Include=".editorconfig" />
     <None Include="Dependencies\BindingListView\BindingListView %28BSD-2-Clause%29.url" />
     <None Include="Dependencies\BindingListView\BindingListView-1.4.1.0.zip" />
     <None Include="Dependencies\CommandLineParser\commandline-2.9.1.zip" />
