--- a/Project/Hebrew Pi.csproj
+++ b/Project/Hebrew Pi.csproj
@@ -376,6 +376,11 @@
     <Compile Include="Source\Entities\History.cs" />
     <Compile Include="Source\Entities\DecupletItem.cs" />
     <Compile Include="Source\Entities\DecupletList.cs" />
+    <Compile Include="Source\Enums\ExportDocumentModel.cs" />
+    <Compile Include="Source\Enums\ExportDocumentTheme.cs" />
+    <Compile Include="Source\Enums\HebrewWordClickAction.cs" />
+    <Compile Include="Source\Enums\TranslatedItemDoubleClickAction.cs" />
+    <Compile Include="Source\Enums\VerseLabelClickAction.cs" />
     <Compile Include="Source\Enums\ViewMode.cs" />
     <Compile Include="Source\Forms\Config\StatisticsForm.cs">
       <SubType>Form</SubType>
@@ -384,10 +389,10 @@
       <DependentUpon>StatisticsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Source\Enums\PiFirstDecimalsLenght.cs" />
-    <Compile Include="Source\Forms\MainForm\Data\MainForm.CreateData.cs">
+    <Compile Include="Source\Forms\MainForm\Data\MainForm.Populate.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Source\Forms\MainForm\Data\MainForm.Batch.cs">
+    <Compile Include="Source\Forms\MainForm\Data\MainForm.Normalize.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Source\Forms\MainForm\MainForm.cs">
