--- a/Project/Hebrew Pi.csproj
+++ b/Project/Hebrew Pi.csproj
@@ -641,6 +641,9 @@
     <PackageReference Include="GregsStack.InputSimulatorStandard">
       <Version>1.3.5</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell">
+      <Version>1.1.5</Version>
+    </PackageReference>
     <PackageReference Include="morelinq">
       <Version>4.4.0</Version>
     </PackageReference>
