--- a/Project/Hebrew Pi.csproj
+++ b/Project/Hebrew Pi.csproj
@@ -156,7 +156,7 @@
     <Compile Include="Source\Common\Core\Exceptions\AbortException.cs" />
     <Compile Include="Source\Common\Core\Exceptions\AdvNotImplementedException.cs" />
     <Compile Include="Source\Common\Core\Exceptions\ExceptionInfo.cs" />
-    <Compile Include="Source\Common\Core\Exceptions\SQLiteException.cs" />
+    <Compile Include="Source\Common\Core\Exceptions\AdvSQLiteException.cs" />
     <Compile Include="Source\Common\Core\Globalization\Languages.cs" />
     <Compile Include="Source\Common\Core\Globalization\Localizer.cs" />
     <Compile Include="Source\Common\Core\Globalization\SysTranslations.Application.cs" />
