--- a/Project/App.config
+++ b/Project/App.config
@@ -49,6 +49,9 @@
             <setting name="AutoSaveDelay" serializeAs="String">
                 <value>5</value>
             </setting>
+            <setting name="HebrewWordClickAction" serializeAs="String">
+                <value>ContextMenu</value>
+            </setting>
             <setting name="OpenVerseOnlineURL" serializeAs="String">
                 <value>https://studybible.info/IHOT/%BOOKSB% %CHAPTERNUM%:%VERSENUM%</value>
             </setting>
@@ -275,6 +278,18 @@
             <setting name="RenderAllChapterVerses" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="HebrewWordShiftClickAction" serializeAs="String">
+                <value>OnlineSearch</value>
+            </setting>
+            <setting name="HebrewWordCtrlClickAction" serializeAs="String">
+                <value>SearchTranslated</value>
+            </setting>
+            <setting name="HebrewWordShiftCtrlClickAction" serializeAs="String">
+                <value>HebrewLetters</value>
+            </setting>
+            <setting name="VerseLabelClickAction" serializeAs="String">
+                <value>ContextMenu</value>
+            </setting>
             <setting name="SearchVerseRadioButtonIndex" serializeAs="String">
                 <value>0</value>
             </setting>
@@ -286,9 +301,6 @@
             </setting>
             <setting name="RenderAllChapterVersesKeep" serializeAs="String">
                 <value>False</value>
-            </setting>
-            <setting name="CurrentView" serializeAs="String">
-                <value>Populate</value>
             </setting>
             <setting name="FontSizeHebrew" serializeAs="String">
                 <value>16</value>
@@ -413,6 +425,9 @@
             <setting name="MethodNoticeFormSize" serializeAs="String">
                 <value>542, 666</value>
             </setting>
+            <setting name="ExportDocumentTheme" serializeAs="String">
+                <value>Medium</value>
+            </setting>
             <setting name="ExportDocumentDifferentOddAndEvenPages" serializeAs="String">
                 <value>True</value>
             </setting>
@@ -451,6 +466,9 @@
             </setting>
             <setting name="ExportDocumentDifferentFirstPage" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="ExportDocumentModel" serializeAs="String">
+                <value>HebrewTabularWithWordForWordAndComment</value>
             </setting>
             <setting name="ExportDocumentVerseRefInBold" serializeAs="String">
                 <value>False</value>
@@ -559,6 +577,9 @@
             </setting>
             <setting name="CommentLineAddPrefixIgnoreChars" serializeAs="String">
                 <value>*-</value>
+            </setting>
+            <setting name="CurrentView" serializeAs="String">
+                <value>Manage</value>
             </setting>
         </Ordisoftware.Hebrew.Pi.Properties.Settings>
     </userSettings>
