--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ﻿PiDecimals GB*.txt
+/Documents/PiDecimals/Fix for pi_dec_1t_01.txt
 
 /Setup/**/*.exe
 *.sha512
@@ -276,4 +277,3 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-/Documents/PiDecimals/pi_dec_1t_02.zip
