--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ﻿PiDecimals GB*.txt
-/Documents/PiDecimals/Fix for pi_dec_1t_01.txt
+/Documents/PiDecimals/pi_dec_1t_02.zip
 
 /Setup/**/*.exe
 *.sha512
