--- a/Project/Hebrew Pi (vs2022).csproj
+++ b/Project/Hebrew Pi (vs2022).csproj
@@ -402,12 +402,13 @@
     <Compile Include="Source\Forms\MainForm\Data\MainForm.Populate.NotEmpty.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Source\Forms\MainForm\Data\MainForm.SQL-no-temp-in-motif.cs" />
-    <Compile Include="Source\Forms\MainForm\Data\MainForm.SQL-with-temp-in-pos-PK.cs" />
-    <Compile Include="Source\Forms\MainForm\Data\MainForm.SQL-with-temp-in-pos.cs" />
-    <Compile Include="Source\Forms\MainForm\Data\MainForm.SQL-with-temp-in-motif-PK.cs" />
-    <Compile Include="Source\Forms\MainForm\Data\MainForm.SQL-with-temp-in-motif.cs" />
-    <Compile Include="Source\Forms\MainForm\Data\MainForm.SQL.cs" />
+    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlWithTempLoopPosPK.cs" />
+    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlNoTempInMotif.cs" />
+    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlWithTempInPosPK.cs" />
+    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlWithTempInPos.cs" />
+    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlWithTempInMotifPK.cs" />
+    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlWithTempInMotif.cs" />
+    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlBase.cs" />
     <Compile Include="Source\Forms\MainForm\Data\MainForm.Populate.cs">
       <SubType>Form</SubType>
     </Compile>
