--- a/Project/Hebrew Pi (vs2022).csproj
+++ b/Project/Hebrew Pi (vs2022).csproj
@@ -402,10 +402,9 @@
     <Compile Include="Source\Forms\MainForm\Data\MainForm.Populate.NotEmpty.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlWithTempLoopPosPK.cs" />
-    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlWithTempInPosPK.cs" />
-    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlWithTempInMotif.cs" />
-    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlBase.cs" />
+    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlReduceRepeatingLoop.cs" />
+    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlReduceRepeatingAll.cs" />
+    <Compile Include="Source\Forms\MainForm\Data\MainForm.SqlReduceRepeating.cs" />
     <Compile Include="Source\Forms\MainForm\Data\MainForm.Populate.cs">
       <SubType>Form</SubType>
     </Compile>
