--- a/Project/Hebrew Pi (vs2022).csproj
+++ b/Project/Hebrew Pi (vs2022).csproj
@@ -55,8 +55,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dependencies\BigArray.cs" />
-    <Compile Include="Dependencies\BigList.cs" />
     <Compile Include="Dependencies\CoolPrintPreviewDialog\CoolPrintPreviewControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -86,9 +84,6 @@
     <Compile Include="Dependencies\Meziantou.AccessToken\TokenPrivilegeEntry.cs" />
     <Compile Include="Dependencies\Meziantou.AccessToken\TokenType.cs" />
     <Compile Include="Dependencies\Meziantou.AccessToken\WellKnownSidType.cs" />
-    <Compile Include="Dependencies\PlatformManager.cs" />
-    <Compile Include="Dependencies\PlatformServices.cs" />
-    <Compile Include="Dependencies\TemporaryStream.cs" />
     <Compile Include="Dependencies\Windows Global Hotkey\Hotkey.cs" />
     <Compile Include="Dependencies\Windows Global Hotkey\HotkeyAction.cs" />
     <Compile Include="Dependencies\Windows Global Hotkey\HotkeyEventArgs.cs" />
@@ -376,6 +371,7 @@
     <Compile Include="Source\Common\Hebrew\WinForms\CelebrationVersesBoardForm.Designer.cs">
       <DependentUpon>CelebrationVersesBoardForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Source\Database\Database.cs" />
     <Compile Include="Source\Database\IterationRow.cs" />
     <Compile Include="Source\Database\DecupletRow.cs" />
     <Compile Include="Source\Enums\ExportDocumentModel.cs" />
@@ -408,7 +404,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Source\Database\ReduceRepeatingBase.cs" />
-    <Compile Include="Source\Database\ReduceRepeatingBigList.cs" />
     <Compile Include="Source\Database\ReduceRepeatingSqlLoop.cs" />
     <Compile Include="Source\Database\ReduceRepeatingSqlUpdate.cs" />
     <Compile Include="Source\Database\ReduceRepeatingSqlBase.cs" />
